<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".activities.BasketActivity">

    <LinearLayout
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBack"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_gravity="center"
            android:background="@drawable/arrow_right"
            tools:ignore="PxUsage,SpeakableTextPresentCheck,TouchTargetSizeCheck"></androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_basket"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:textSize="20sp"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"></TextView>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="10dp"
        android:divider="@color/transparent"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/checkoutPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skipasind_40_104_reykjavik"
        android:textSize="45px"
        android:layout_margin="20px"
        app:drawableLeftCompat="@drawable/map"
        tools:ignore="PxUsage"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_30_40_minutes"
            android:textSize="45px"
            android:layout_margin="20px"
            app:drawableLeftCompat="@drawable/clock"
            tools:ignore="PxUsage"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_ending_in_8888"
            android:textSize="45px"
            android:layout_margin="20px"
            app:drawableLeftCompat="@drawable/card"
            tools:ignore="PxUsage"></TextView>

        <LinearLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/name"
                tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
                android:autofillHints="" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10px"
                android:background="@color/addBtnStroke"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/give_me_my_pizza"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="PxUsage,TextContrastCheck,VisualLintButtonSize" />
        </LinearLayout>
</LinearLayout>
</LinearLayout>
